--- a/tests/fixture/Makefile
+++ b/tests/fixture/Makefile
@@ -4,6 +4,11 @@ CFLAGS ?= -fPIC -O2 -Wall -Wextra -Wno-unused-parameter
 
 TARGET=init_fixture.so
 
+ifeq ($(shell uname),Darwin)
+CFLAGS += -I../../src/compat
+OBJS += ../../src/compat/compat.o
+endif
+
 SRC=$(wildcard *.c)
 OBJ=$(SRC:.c=.o)
 
