--- a/examples/demo/config/grub.cfg
+++ b/examples/demo/config/grub.cfg
@@ -13,10 +13,10 @@ load_env
 # Boot A or B depending on which one is active
 if [ $boot = 1 ]; then
      echo "Booting partition B..."
-     linux (hd0,msdos3)/boot/bzImage root=PARTUUID=04030201-03 console=tty1
+     linux (hd0,msdos3)/boot/bzImage rootfs.path=PARTUUID=04030201-03 console=ttyS0
 else
      echo "Booting partition A..."
-     linux (hd0,msdos2)/boot/bzImage root=PARTUUID=04030201-02 console=tty1
+     linux (hd0,msdos2)/boot/bzImage rootfs.path=PARTUUID=04030201-02 console=ttyS0
 fi
 
 initrd (hd0,msdos1)/boot/initramfs
