--- a/examples/demo/config/fwup-x86_64.conf
+++ b/examples/demo/config/fwup-x86_64.conf
@@ -1,6 +1,6 @@
 # Firmware configuration file for x86_64
 
-require-fwup-version="0.15.0"  # For the trim() call
+require-fwup-version="1.0.0"
 
 #
 # Firmware metadata
@@ -30,46 +30,58 @@ define(NERVES_PROVISIONING, "${NERVES_SYSTEM}/images/fwup_include/provisioning.c
 # Default paths if not specified via the commandline
 define(ROOTFS, "${NERVES_SYSTEM}/images/rootfs.squashfs")
 
-# This configuration file will create an image that has an MBR and the
-# following 3 partitions:
+# This configuration file will create an image that
+# has an MBR and the following layout:
 #
-# +----------------------------+
-# | MBR w/ Grub boot code      |
-# +----------------------------+
-# | grub.img (<256K)           |
-# +----------------------------+
-# | Firmware configuration data|
-# | (formatted as uboot env)   |
-# +----------------------------+
-# | Boot partition (FAT32)     |
-# | /boot/grub/grub.cfg        |
-# | /boot/grub/grubenv         |
-# +----------------------------+
-# | p2: Rootfs A (squashfs)    |
-# +----------------------------+
-# | p3: Rootfs B (squashfs)    |
-# +----------------------------+
-# | p4: Application (ext4)     |
-# +----------------------------+
+# +-------------------------------+
+# | MBR w/ Grub boot code         |
+# +-------------------------------+
+# | grub.img (<256K)              |
+# +-------------------------------+
+# | Firmware configuration data   |
+# | (formatted as uboot env)      |
+# +-------------------------------+
+# | p0*: Kernel A (Readonly FAT32)|
+# |     /boot/grub/grub.cfg       |
+# |     /boot/bzLinux             |
+# |     /boot/nerves_initramfs    |
+# +-------------------------------+
+# | p0*: Kernel B (Readonly FAT32)|
+# +-------------------------------+
+# | p1*: Rootfs A (squashfs)      |
+# +-------------------------------+
+# | p1*: Rootfs B (squashfs)      |
+# +-------------------------------+
+# | p3: Application (ext4)        |
+# +-------------------------------+
+#
+# The p0 and p1 partitions point to whichever of configurations A or B that is
+# active.
+#
+# Note: The kernel is stored outside of the rootfs more for consistency with other
+#       Nerves systems that have bootloaders that can't read inside the rootfs.
+#       It could be moved inside the squashfs by enabling grub's squashfs support.
 
-define(UBOOT_ENV_OFFSET, 2048)
-define(UBOOT_ENV_COUNT, 16)  # 8 KB
+define(MBR_SIGNATURE, 0x44332211)
 
-# The boot partition contains the bootloader configuration
-# 16 MB should be plenty for now.
-define(BOOT_PART_OFFSET, 4096)
-define(BOOT_PART_COUNT, 31232)
+define(UBOOT_ENV_OFFSET, 512)
+define(UBOOT_ENV_COUNT, 256)  # 128 KB
+
+# Let the kernel have room to grow up to 16 MiB
+define-eval(BOOT_A_PART_OFFSET, 1024)
+define(BOOT_A_PART_COUNT, 32768)
+define-eval(BOOT_B_PART_OFFSET, "${BOOT_A_PART_OFFSET} + ${BOOT_A_PART_COUNT}")
+define(BOOT_B_PART_COUNT, ${BOOT_A_PART_COUNT})
 
 # Let the rootfs have room to grow up to 256 MiB
-define-eval(ROOTFS_A_PART_OFFSET, "${BOOT_PART_OFFSET} + ${BOOT_PART_COUNT}")
+define-eval(ROOTFS_A_PART_OFFSET, "${BOOT_B_PART_OFFSET} + ${BOOT_B_PART_COUNT}")
 define(ROOTFS_A_PART_COUNT, 524288)
 define-eval(ROOTFS_B_PART_OFFSET, "${ROOTFS_A_PART_OFFSET} + ${ROOTFS_A_PART_COUNT}")
 define(ROOTFS_B_PART_COUNT, ${ROOTFS_A_PART_COUNT})
 
-# Application data partition (10 GiB). This can be enlarged
-# to fill the entire volume.
+# Application data partition (>= 384 MiB). This partition is set to expand to fill the disk.
 define-eval(APP_PART_OFFSET, "${ROOTFS_B_PART_OFFSET} + ${ROOTFS_B_PART_COUNT}")
-define(APP_PART_COUNT, 20971520)
+define(APP_PART_COUNT, 786432)
 
 # Firmware archive metadata
 meta-product = ${NERVES_FW_PRODUCT}
@@ -90,36 +102,26 @@ file-resource grub.img {
 file-resource grub.cfg {
     host-path = "grub.cfg"
 }
-file-resource initramfs {
-    host-path = "../../../builder/o/nerves_initramfs_x86_64/images/rootfs.cpio.xz;nerves_initramfs-x86_64.conf.cpio"
+file-resource bzImage {
+    host-path = "${NERVES_SYSTEM}/images/bzImage"
 }
-
-# Order the rootfs image before the grub environment resources
-# so that the grub environment blobs get written last. This
-# is in case the user aborts the programming midway.
+file-resource nerves_initramfs {
+    host-path = "../../../builder/o/nerves_initramfs_x86_64/images/rootfs.cpio.xz;nerves_initramfs-x86_64.conf.cpio;revert.fw.cpio"
+}
 file-resource rootfs.img {
     host-path = ${ROOTFS}
 
     # Error out if the rootfs size exceeds the partition size
     assert-size-lte = ${ROOTFS_A_PART_COUNT}
 }
-file-resource grubenv_a_valid {
-    host-path = "${NERVES_SYSTEM}/images/grubenv_a_valid"
-}
-file-resource grubenv_a {
-    host-path = "${NERVES_SYSTEM}/images/grubenv_a"
-}
-file-resource grubenv_b {
-    host-path = "${NERVES_SYSTEM}/images/grubenv_b"
-}
 
-mbr mbr {
+mbr mbr-a {
     bootstrap-code-host-path = "${NERVES_SYSTEM}/images/boot.img"
-    signature = 0x04030201
+    signature = ${MBR_SIGNATURE}
 
     partition 0 {
-        block-offset = ${BOOT_PART_OFFSET}
-        block-count = ${BOOT_PART_COUNT}
+        block-offset = ${BOOT_A_PART_OFFSET}
+        block-count = ${BOOT_A_PART_COUNT}
         type = 0xc # FAT32
         boot = true
     }
@@ -128,15 +130,36 @@ mbr mbr {
         block-count = ${ROOTFS_A_PART_COUNT}
         type = 0x83 # Linux
     }
-    partition 2 {
-        block-offset = ${ROOTFS_B_PART_OFFSET}
-        block-count = ${ROOTFS_B_PART_COUNT}
-        type = 0x83 # Linux
-    }
+    # partition 2 unused
     partition 3 {
         block-offset = ${APP_PART_OFFSET}
         block-count = ${APP_PART_COUNT}
         type = 0x83 # Linux
+        expand = true
+    }
+}
+
+mbr mbr-b {
+    bootstrap-code-host-path = "${NERVES_SYSTEM}/images/boot.img"
+    signature = ${MBR_SIGNATURE}
+
+    partition 0 {
+        block-offset = ${BOOT_B_PART_OFFSET}
+        block-count = ${BOOT_B_PART_COUNT}
+        type = 0xc # FAT32
+        boot = true
+    }
+    partition 1 {
+        block-offset = ${ROOTFS_B_PART_OFFSET}
+        block-count = ${ROOTFS_B_PART_COUNT}
+        type = 0x83 # Linux
+    }
+    # partition 2 unused
+    partition 3 {
+        block-offset = ${APP_PART_OFFSET}
+        block-count = ${APP_PART_COUNT}
+        type = 0x83 # Linux
+        expand = true
     }
 }
 
@@ -155,17 +178,24 @@ task complete {
     require-unmounted-destination = true
 
     on-init {
-        mbr_write(mbr)
+        mbr_write(mbr-a)
 
-        fat_mkfs(${BOOT_PART_OFFSET}, ${BOOT_PART_COUNT})
-        fat_mkdir(${BOOT_PART_OFFSET}, "/boot")
-        fat_mkdir(${BOOT_PART_OFFSET}, "/boot/grub")
+        fat_mkfs(${BOOT_A_PART_OFFSET}, ${BOOT_A_PART_COUNT})
+        fat_setlabel(${BOOT_A_PART_OFFSET}, "BOOT_A")
+        fat_mkdir(${BOOT_A_PART_OFFSET}, "/boot")
+        fat_mkdir(${BOOT_A_PART_OFFSET}, "/boot/grub")
 
         uboot_clearenv(uboot-env)
 
         include("${NERVES_PROVISIONING}")
 
+        # Add in the generic Nerves metadata variables.
+        # NOTE: Provisioning variables should not collide with the ones below, but
+        #       write them second just in case.
         uboot_setenv(uboot-env, "nerves_fw_active", "a")
+        uboot_setenv(uboot-env, "nerves_fw_autovalidate", "0")
+        uboot_setenv(uboot-env, "nerves_fw_validated", "1")
+        uboot_setenv(uboot-env, "nerves_fw_booted", "0")
         uboot_setenv(uboot-env, "nerves_fw_devpath", ${NERVES_FW_DEVPATH})
         uboot_setenv(uboot-env, "a.nerves_fw_application_part0_devpath", ${NERVES_FW_APPLICATION_PART0_DEVPATH})
         uboot_setenv(uboot-env, "a.nerves_fw_application_part0_fstype", ${NERVES_FW_APPLICATION_PART0_FSTYPE})
@@ -182,25 +212,24 @@ task complete {
     }
 
     on-resource grub.img { raw_write(1) }
-    on-resource grub.cfg { fat_write(${BOOT_PART_OFFSET}, "/boot/grub/grub.cfg") }
-    on-resource grubenv_a_valid { fat_write(${BOOT_PART_OFFSET}, "/boot/grub/grubenv") }
-    on-resource initramfs { fat_write(${BOOT_PART_OFFSET}, "/boot/initramfs") }
 
-    on-resource rootfs.img {
-        # write to the first rootfs partition
-        raw_write(${ROOTFS_A_PART_OFFSET})
-    }
+    on-resource grub.cfg { fat_write(${BOOT_A_PART_OFFSET}, "/boot/grub/grub.cfg") }
+    on-resource bzImage { fat_write(${BOOT_A_PART_OFFSET}, "/boot/bzImage") }
+    on-resource nerves_initramfs { fat_write(${BOOT_A_PART_OFFSET}, "/boot/nerves_initramfs") }
+
+    on-resource rootfs.img { raw_write(${ROOTFS_A_PART_OFFSET})}
 
     on-finish {
-      # Clear out any old data in the B partition that might be mistaken for
-      # a file system. This is mostly to avoid confusion in humans when
-      # reprogramming SDCards with unknown contents.
-      raw_memset(${ROOTFS_B_PART_OFFSET}, 256, 0xff)
+        # Clear out any old data in the B partition that might be mistaken for
+        # a file system. This is mostly to avoid confusion in humans when
+        # reprogramming SDCards with unknown contents.
+        raw_memset(${ROOTFS_B_PART_OFFSET}, 256, 0xff)
 
-      # Invalidate the application data partition so that it is guaranteed to
-      # trigger the corrupt filesystem detection code on first boot and get
-      # formatted.
-      raw_memset(${APP_PART_OFFSET}, 256, 0xff)
+        # Invalidate the application data partition so that it is guaranteed to
+        # trigger the corrupt filesystem detection code on first boot and get
+        # formatted. If this isn't done and an old SDCard is reused, the
+        # application data could be in a weird state.
+        raw_memset(${APP_PART_OFFSET}, 256, 0xff)
     }
 }
 
@@ -208,6 +237,10 @@ task upgrade.a {
     # This task upgrades the A partition, so make sure we're running
     # on B.
     require-uboot-variable(uboot-env, "nerves_fw_active", "b")
+
+    # Require that the running version of firmware has been validated.
+    # If it has not, then failing back is not guaranteed to work.
+    require-uboot-variable(uboot-env, "nerves_fw_validated", "1")
 
     # Verify the expected platform/architecture
     require-uboot-variable(uboot-env, "b.nerves_fw_platform", "${NERVES_FW_PLATFORM}")
@@ -225,35 +258,45 @@ task upgrade.a {
         uboot_unsetenv(uboot-env, "a.nerves_fw_uuid")
 
         # Indicate that the entire partition can be cleared
+        trim(${BOOT_A_PART_OFFSET}, ${BOOT_A_PART_COUNT})
         trim(${ROOTFS_A_PART_OFFSET}, ${ROOTFS_A_PART_COUNT})
+
+        fat_mkfs(${BOOT_A_PART_OFFSET}, ${BOOT_A_PART_COUNT})
+        fat_setlabel(${BOOT_A_PART_OFFSET}, "BOOT_A")
+        fat_mkdir(${BOOT_A_PART_OFFSET}, "/boot")
+        fat_mkdir(${BOOT_A_PART_OFFSET}, "/boot/grub")
     }
 
-    on-resource rootfs.img {
-        raw_write(${ROOTFS_A_PART_OFFSET})
-    }
+    on-resource grub.cfg { fat_write(${BOOT_A_PART_OFFSET}, "/boot/grub/grub.cfg") }
+    on-resource bzImage { fat_write(${BOOT_A_PART_OFFSET}, "/boot/bzImage") }
+    on-resource nerves_initramfs { fat_write(${BOOT_A_PART_OFFSET}, "/boot/nerves_initramfs") }
 
-    # Key step to switching over the A partition
-    on-resource grubenv_a {
-      # Update firmware metadata
-      uboot_setenv(uboot-env, "a.nerves_fw_application_part0_devpath", ${NERVES_FW_APPLICATION_PART0_DEVPATH})
-      uboot_setenv(uboot-env, "a.nerves_fw_application_part0_fstype", ${NERVES_FW_APPLICATION_PART0_FSTYPE})
-      uboot_setenv(uboot-env, "a.nerves_fw_application_part0_target", ${NERVES_FW_APPLICATION_PART0_TARGET})
-      uboot_setenv(uboot-env, "a.nerves_fw_product", ${NERVES_FW_PRODUCT})
-      uboot_setenv(uboot-env, "a.nerves_fw_description", ${NERVES_FW_DESCRIPTION})
-      uboot_setenv(uboot-env, "a.nerves_fw_version", ${NERVES_FW_VERSION})
-      uboot_setenv(uboot-env, "a.nerves_fw_platform", ${NERVES_FW_PLATFORM})
-      uboot_setenv(uboot-env, "a.nerves_fw_architecture", ${NERVES_FW_ARCHITECTURE})
-      uboot_setenv(uboot-env, "a.nerves_fw_author", ${NERVES_FW_AUTHOR})
-      uboot_setenv(uboot-env, "a.nerves_fw_vcs_identifier", ${NERVES_FW_VCS_IDENTIFIER})
-      uboot_setenv(uboot-env, "a.nerves_fw_misc", ${NERVES_FW_MISC})
-      uboot_setenv(uboot-env, "a.nerves_fw_uuid", "\${FWUP_META_UUID}")
-
-      # Switch over to boot the new firmware
-      uboot_setenv(uboot-env, "nerves_fw_active", "a")
-      fat_write(${BOOT_PART_OFFSET}, "/boot/grub/grubenv")
-    }
+    on-resource rootfs.img { raw_write(${ROOTFS_A_PART_OFFSET}) }
 
     on-finish {
+        # Update firmware metadata
+        uboot_setenv(uboot-env, "a.nerves_fw_application_part0_devpath", ${NERVES_FW_APPLICATION_PART0_DEVPATH})
+        uboot_setenv(uboot-env, "a.nerves_fw_application_part0_fstype", ${NERVES_FW_APPLICATION_PART0_FSTYPE})
+        uboot_setenv(uboot-env, "a.nerves_fw_application_part0_target", ${NERVES_FW_APPLICATION_PART0_TARGET})
+        uboot_setenv(uboot-env, "a.nerves_fw_product", ${NERVES_FW_PRODUCT})
+        uboot_setenv(uboot-env, "a.nerves_fw_description", ${NERVES_FW_DESCRIPTION})
+        uboot_setenv(uboot-env, "a.nerves_fw_version", ${NERVES_FW_VERSION})
+        uboot_setenv(uboot-env, "a.nerves_fw_platform", ${NERVES_FW_PLATFORM})
+        uboot_setenv(uboot-env, "a.nerves_fw_architecture", ${NERVES_FW_ARCHITECTURE})
+        uboot_setenv(uboot-env, "a.nerves_fw_author", ${NERVES_FW_AUTHOR})
+        uboot_setenv(uboot-env, "a.nerves_fw_vcs_identifier", ${NERVES_FW_VCS_IDENTIFIER})
+        uboot_setenv(uboot-env, "a.nerves_fw_misc", ${NERVES_FW_MISC})
+        uboot_setenv(uboot-env, "a.nerves_fw_uuid", "\${FWUP_META_UUID}")
+
+        # Reset the validation status and boot to A
+        # next time.
+        uboot_setenv(uboot-env, "nerves_fw_active", "a")
+        uboot_setenv(uboot-env, "nerves_fw_validated", "0")
+        uboot_setenv(uboot-env, "nerves_fw_booted", "0")
+        mbr_write(mbr-a)
+    }
+
+    on-error {
     }
 }
 
@@ -261,54 +304,72 @@ task upgrade.b {
     # This task upgrades the B partition, so make sure we're running
     # on A.
     require-uboot-variable(uboot-env, "nerves_fw_active", "a")
+    require-uboot-variable(uboot-env, "nerves_fw_validated", "1")
 
     # Verify the expected platform/architecture
     require-uboot-variable(uboot-env, "a.nerves_fw_platform", "${NERVES_FW_PLATFORM}")
     require-uboot-variable(uboot-env, "a.nerves_fw_architecture", "${NERVES_FW_ARCHITECTURE}")
 
     on-init {
-      info("Upgrading partition B")
+        info("Upgrading partition B")
 
-      # Clear some firmware information just in case this update gets
-      # interrupted midway.
-      uboot_unsetenv(uboot-env, "b.nerves_fw_version")
-      uboot_unsetenv(uboot-env, "b.nerves_fw_platform")
-      uboot_unsetenv(uboot-env, "b.nerves_fw_architecture")
-      uboot_unsetenv(uboot-env, "b.nerves_fw_uuid")
+        # Clear some firmware information just in case this update gets
+        # interrupted midway.
+        uboot_unsetenv(uboot-env, "b.nerves_fw_version")
+        uboot_unsetenv(uboot-env, "b.nerves_fw_platform")
+        uboot_unsetenv(uboot-env, "b.nerves_fw_architecture")
+        uboot_unsetenv(uboot-env, "b.nerves_fw_uuid")
 
-      trim(${ROOTFS_B_PART_OFFSET}, ${ROOTFS_B_PART_COUNT})
+        trim(${BOOT_B_PART_OFFSET}, ${BOOT_B_PART_COUNT})
+        trim(${ROOTFS_B_PART_OFFSET}, ${ROOTFS_B_PART_COUNT})
+
+        fat_mkfs(${BOOT_B_PART_OFFSET}, ${BOOT_B_PART_COUNT})
+        fat_setlabel(${BOOT_B_PART_OFFSET}, "BOOT_B")
+        fat_mkdir(${BOOT_B_PART_OFFSET}, "/boot")
+        fat_mkdir(${BOOT_B_PART_OFFSET}, "/boot/grub")
     }
 
-    on-resource rootfs.img {
-        raw_write(${ROOTFS_B_PART_OFFSET})
-    }
+    on-resource grub.cfg { fat_write(${BOOT_B_PART_OFFSET}, "/boot/grub/grub.cfg") }
+    on-resource bzImage { fat_write(${BOOT_B_PART_OFFSET}, "/boot/bzImage") }
+    on-resource nerves_initramfs { fat_write(${BOOT_B_PART_OFFSET}, "/boot/nerves_initramfs") }
 
-    # Key step to switching over the B partition
-    on-resource grubenv_b {
-      # Update firmware metadata
-      uboot_setenv(uboot-env, "b.nerves_fw_application_part0_devpath", ${NERVES_FW_APPLICATION_PART0_DEVPATH})
-      uboot_setenv(uboot-env, "b.nerves_fw_application_part0_fstype", ${NERVES_FW_APPLICATION_PART0_FSTYPE})
-      uboot_setenv(uboot-env, "b.nerves_fw_application_part0_target", ${NERVES_FW_APPLICATION_PART0_TARGET})
-      uboot_setenv(uboot-env, "b.nerves_fw_product", ${NERVES_FW_PRODUCT})
-      uboot_setenv(uboot-env, "b.nerves_fw_description", ${NERVES_FW_DESCRIPTION})
-      uboot_setenv(uboot-env, "b.nerves_fw_version", ${NERVES_FW_VERSION})
-      uboot_setenv(uboot-env, "b.nerves_fw_platform", ${NERVES_FW_PLATFORM})
-      uboot_setenv(uboot-env, "b.nerves_fw_architecture", ${NERVES_FW_ARCHITECTURE})
-      uboot_setenv(uboot-env, "b.nerves_fw_author", ${NERVES_FW_AUTHOR})
-      uboot_setenv(uboot-env, "b.nerves_fw_vcs_identifier", ${NERVES_FW_VCS_IDENTIFIER})
-      uboot_setenv(uboot-env, "b.nerves_fw_misc", ${NERVES_FW_MISC})
-      uboot_setenv(uboot-env, "b.nerves_fw_uuid", "\${FWUP_META_UUID}")
-
-      # Switch over to boot the new firmware
-      uboot_setenv(uboot-env, "nerves_fw_active", "b")
-      fat_write(${BOOT_PART_OFFSET}, "/boot/grub/grubenv")
-    }
+    on-resource rootfs.img { raw_write(${ROOTFS_B_PART_OFFSET}) }
 
     on-finish {
+        # Update firmware metadata
+        uboot_setenv(uboot-env, "b.nerves_fw_application_part0_devpath", ${NERVES_FW_APPLICATION_PART0_DEVPATH})
+        uboot_setenv(uboot-env, "b.nerves_fw_application_part0_fstype", ${NERVES_FW_APPLICATION_PART0_FSTYPE})
+        uboot_setenv(uboot-env, "b.nerves_fw_application_part0_target", ${NERVES_FW_APPLICATION_PART0_TARGET})
+        uboot_setenv(uboot-env, "b.nerves_fw_product", ${NERVES_FW_PRODUCT})
+        uboot_setenv(uboot-env, "b.nerves_fw_description", ${NERVES_FW_DESCRIPTION})
+        uboot_setenv(uboot-env, "b.nerves_fw_version", ${NERVES_FW_VERSION})
+        uboot_setenv(uboot-env, "b.nerves_fw_platform", ${NERVES_FW_PLATFORM})
+        uboot_setenv(uboot-env, "b.nerves_fw_architecture", ${NERVES_FW_ARCHITECTURE})
+        uboot_setenv(uboot-env, "b.nerves_fw_author", ${NERVES_FW_AUTHOR})
+        uboot_setenv(uboot-env, "b.nerves_fw_vcs_identifier", ${NERVES_FW_VCS_IDENTIFIER})
+        uboot_setenv(uboot-env, "b.nerves_fw_misc", ${NERVES_FW_MISC})
+        uboot_setenv(uboot-env, "b.nerves_fw_uuid", "\${FWUP_META_UUID}")
+
+        # Reset the validation status and boot to B next time.
+        uboot_setenv(uboot-env, "nerves_fw_active", "b")
+        uboot_setenv(uboot-env, "nerves_fw_validated", "0")
+        uboot_setenv(uboot-env, "nerves_fw_booted", "0")
+        mbr_write(mbr-b)
+    }
+
+    on-error {
     }
 }
 
-task upgrade.wrong {
+task upgrade.unvalidated {
+    require-uboot-variable(uboot-env, "nerves_fw_validated", "0")
+
+    on-init {
+        error("Please validate the running firmware before upgrading it again.")
+    }
+}
+
+task upgrade.unexpected {
     require-uboot-variable(uboot-env, "a.nerves_fw_platform", "${NERVES_FW_PLATFORM}")
     require-uboot-variable(uboot-env, "a.nerves_fw_architecture", "${NERVES_FW_ARCHITECTURE}")
     on-init {
