--- a/examples/demo/config/grub.cfg
+++ b/examples/demo/config/grub.cfg
@@ -3,23 +3,9 @@
 # This script expects the following Grub2 modules to be compiled
 # into the grub binary (grub.img):
 #
-# boot linux squash4 ext2 fat part_msdos normal biosdisk loadenv echo true test
+# boot linux fat part_msdos normal biosdisk
 #
 
-# Load the environment for the validation/fallback settings
-# (image validation/fallback not added here yet...)
-load_env
-
-# Boot A or B depending on which one is active
-if [ $boot = 1 ]; then
-     echo "Booting partition B..."
-     linux (hd0,msdos3)/boot/bzImage rootfs.path=PARTUUID=04030201-03 console=ttyS0
-else
-     echo "Booting partition A..."
-     linux (hd0,msdos2)/boot/bzImage rootfs.path=PARTUUID=04030201-02 console=ttyS0
-fi
-
-initrd (hd0,msdos1)/boot/initramfs
-
-# Boot!!!
+linux /boot/bzImage console=ttyS0 --nerves_initramfs=rootfs.path=PARTUUID=44332211-03
+initrd /boot/nerves_initramfs
 boot
