--- a/examples/demo/config/nerves_initramfs-x86_64.conf
+++ b/examples/demo/config/nerves_initramfs-x86_64.conf
@@ -1,4 +1,39 @@
-info("Hello!!!!")
 
 run_repl = true
+
+uboot_env.path="DISKUUID=44332211"
+uboot_env.start=512
+uboot_env.count=256
+
+rootfs.path="PARTUUID=44332211-02"
+rootfs.fstype="squashfs"
+rootfs.secret=""
+rootfs.cipher=""
+rootfs.encrypted=false
+
+loadenv()
+
+fw_active=getenv("nerves_fw_active")
+fw_autovalidate=getenv("nerves_fw_autovalidate")
+fw_validated=getenv("nerves_fw_validated")
+fw_booted=getenv("nerves_fw_booted")
+
+!fw_validated && fw_autovalidate -> { fw_validated=1; setenv("nerves_fw_validated", "1"); saveenv() }
+
+!fw_validated && fw_booted -> {
+    info("Reverting since ", fw_active, " was tried and wasn't validated")
+
+    fwup_revert()
+
+    # Need to reboot to use the other kernel
+    reboot()
+}
+
+!fw_booted -> {
+    setenv("nerves_fw_booted", "1")
+    saveenv()
+}
+
+info("Running out of the '", fw_active, "' firmware slot...")
+
 
