Print out version on start

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,3 +1,5 @@
+VERSION=0.3.0
+
 BISON ?= bison
 FLEX ?= flex
 
@@ -5,6 +7,8 @@ CFLAGS += -Wall -Wextra
 
 # _GNU_SOURCE is for asprintf
 CFLAGS += -D_GNU_SOURCE
+
+CFLAGS += -DPROGRAM_VERSION=$(VERSION)
 
 OBJS = nerves_initramfs.o util.o crc32.o uboot_env.o lex.yy.o parser.tab.o script.o linenoise.o block_device.o cmd.o
 
