--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,6 +66,19 @@ jobs:
         TARGET_CONFIG: nerves_initramfs_x86_64
     <<: *build_initramfs
 
+  build_debug_arm:
+    <<: *defaults
+    environment:
+        TARGET_CONFIG: nerves_initramfs_debug_arm
+    <<: *build_initramfs
+
+  build_debug_x86_64:
+    <<: *defaults
+    environment:
+        TARGET_CONFIG: nerves_initramfs_debug_x86_64
+    <<: *build_initramfs
+
+
   test:
     <<: *defaults
     <<: *run_tests
@@ -119,12 +132,22 @@ workflows:
           filters:
             tags:
               only: /.*/
+      - build_debug_arm:
+          filters:
+            tags:
+              only: /.*/
+      - build_debug_x86_64:
+          filters:
+            tags:
+              only: /.*/
       - test:
           filters:
             tags:
               only: /.*/
       - deploy:
           requires:
+            - build_debug_arm
+            - build_debug_x86_64
             - build_arm
             - build_x86_64
             - test
