Publish debug nerves_initramfs images next time

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -102,6 +102,16 @@ jobs:
       - restore_cache:
           key: deploy/{{ checksum ".target" }}-{{ .Revision }}-{{ .Environment.CIRCLE_TAG }}
       - run:
+          name: Restore nerves_initramfs_debug_arm
+          command: echo "nerves_initramfs_debug_arm" > .target
+      - restore_cache:
+          key: deploy/{{ checksum ".target" }}-{{ .Revision }}-{{ .Environment.CIRCLE_TAG }}
+      - run:
+          name: Restore nerves_initramfs_debug_x86_64
+          command: echo "nerves_initramfs_debug_x86_64" > .target
+      - restore_cache:
+          key: deploy/{{ checksum ".target" }}-{{ .Revision }}-{{ .Environment.CIRCLE_TAG }}
+       - run:
           name: Create release notes
           command: grep -Pazo "(?s)(?<=## ${CIRCLE_TAG})[^#]+" ~/deploy/CHANGELOG.md | sed '/./,$!d' > ~/deploy/RELEASE_NOTES
       - run:
