Fix LDFLAGS typo
This had the side effect of removing the `-static` option and that would
break the build. This also moves the `-c` to make compilation command
lines easier to compare with other code.

--- a/src/Makefile
+++ b/src/Makefile
@@ -21,10 +21,10 @@ OBJS += compat/compat.o
 endif
 
 init: $(OBJS)
-	$(CC) $(LDLAGS) -o $@ $^
+	$(CC) $(LDFLAGS) -o $@ $^
 
 %.o: %.c
-	$(CC) -c $(CFLAGS) $(EXTRA_CFLAGS) -o $@ $^
+	$(CC) $(CFLAGS) $(EXTRA_CFLAGS) -c -o $@ $^
 
 parser.tab.c parser.tab.h: parser.y
 	$(BISON) -d $(BISONFLAGS) $<
