--- a/examples/demo/config/nerves_initramfs-x86_64.conf
+++ b/examples/demo/config/nerves_initramfs-x86_64.conf
@@ -21,7 +21,7 @@ fw_booted=getenv("nerves_fw_booted")
 !fw_validated && fw_autovalidate -> { fw_validated=1; setenv("nerves_fw_validated", "1"); saveenv() }
 
 !fw_validated && fw_booted -> {
-    info("Reverting since ", fw_active, " was tried and wasn't validated")
+    print("Reverting since ", fw_active, " was tried and wasn't validated")
 
     fwup_revert()
 
@@ -34,6 +34,6 @@ fw_booted=getenv("nerves_fw_booted")
     saveenv()
 }
 
-info("Running out of the '", fw_active, "' firmware slot...")
+print("Running out of the '", fw_active, "' firmware slot...")
 
 
