Refactor commandline argument passing
The Linux kernel intercepts a LOT of different ways of passing
commandline parameters. This is very confusing, but makes sense from the
Linux kernel's perspective. To make things less confusing for
`nerves_initramfs` users, add instructions for passing all commandline
args after a `--` on the commandline. Linux won't process anything after
that. This also allows simplifications to the parameters to just
key=value or just key. See the README.md for examples.

--- a/examples/demo/config/grub.cfg
+++ b/examples/demo/config/grub.cfg
@@ -6,6 +6,6 @@
 # boot linux fat part_msdos normal biosdisk
 #
 
-linux /boot/bzImage console=ttyS0 --nerves_initramfs=rootfs.path=PARTUUID=44332211-03
+linux /boot/bzImage console=ttyS0 -- hello_from_grub
 initrd /boot/nerves_initramfs
 boot
