Create /dev/rootdisk* symlinks
Normally erlinit creates the /dev/rootdisk* symlinks so that
applications don't need to know what hardware they're running on or in
what order Linux enumerated block devices. However, erlinit has to
reverse engineer this information from running stat on `/`. In contrast,
`nerves_initramfs` knows exactly what these symlinks should be. Creating
them here is easier especially when the link between `/` and the
physical block device is indirect.

--- a/src/Makefile
+++ b/src/Makefile
@@ -13,7 +13,7 @@ endif
 
 CFLAGS += -DPROGRAM_VERSION=$(VERSION)
 
-OBJS = nerves_initramfs.o util.o crc32.o uboot_env.o lex.yy.o parser.tab.o script.o linenoise.o block_device.o cmd.o
+OBJS = nerves_initramfs.o util.o crc32.o uboot_env.o lex.yy.o parser.tab.o script.o linenoise.o block_device.o cmd.o rootdisk.o
 
 ifeq ($(shell uname),Darwin)
 EXTRA_CFLAGS += -Icompat
