Force a reboot after reverting firmware
This is an opinionated change to avoid a hard-to-debug situation where
the script does not reboot after reverting. In this case, the Linux
kernel could be different. This might cause kernel modules not to load
(due to version mismatches, API changes, etc.), and will certainly be
confusing to debug if it ever happened in the field.

--- a/examples/demo/config/nerves_initramfs-x86_64.conf
+++ b/examples/demo/config/nerves_initramfs-x86_64.conf
@@ -25,8 +25,7 @@ fw_booted=getenv("nerves_fw_booted")
 
     fwup_revert()
 
-    # Need to reboot to use the other kernel
-    reboot()
+    print("Revert failed??")
 }
 
 !fw_booted -> {
