--- a/builder/configs/nerves_initramfs_debug_arm_defconfig
+++ b/builder/configs/nerves_initramfs_debug_arm_defconfig
@@ -15,6 +15,7 @@ BR2_SYSTEM_BIN_SH_NONE=y
 # BR2_TARGET_GENERIC_GETTY is not set
 BR2_ROOTFS_POST_BUILD_SCRIPT="${BR2_EXTERNAL_CUSTOM_PATH}/board/nerves_initramfs/post-build.sh"
 # BR2_PACKAGE_BUSYBOX is not set
+BR2_PACKAGE_FWUP=y
 # BR2_PACKAGE_IFUPDOWN_SCRIPTS is not set
 # BR2_TARGET_ROOTFS_TAR is not set
 BR2_PACKAGE_NERVES_INITRAMFS=y
